# fill

./: .coverage  .env.example  .gitignore  .ralphrc  BETA_FEEDBACK.md  CLAUDE_FIX_QUICK.md  CLAUDE_SETUP_WINDOWS.md  FIX_CLAUDE_SETTINGS.md  GIT_COMMIT_STANDARDS.md  MIGRATIONS_README.md  Makefile  PROJECT_CONTEXT.md  QUICK_REFERENCE.md  README.md  TEST_REPORT.md  WINDOWS_SETUP_CHECKLIST.md  alembic.ini  alembic_env.py  check_env.py  debug_demo.html  demo_auto_rollback.txt  demo_batch_ui.py  demo_rollback.txt  devops.py  executor.py  fix_claude_settings.py  fix_settings.bat  fix_settings.ps1  mcp_automation_server.py  migrations.py  pyproject.toml  requirements.txt  rollback_test_auto.txt  rollback_test_manual.txt  rollback_test_multi.txt  rules.json  rules.toml  run_tests.py  start.py  test_batch_decisions.py  (+5 more)
.claude/: settings.json  settings.local.json
.claude/hooks/: automation.py
.git_hooks/: pre-commit.bak
.logs/: execution-2026-02-11.jsonl
.ralph/: AGENT.md
.rules/: automation-principles.md
.trust/: scores.json
data/: fill.db
docs/: CLAUDE_INTEGRATION.md  CLAUDE_QUICKREF.md  api.md  beta-release-notes.md  calculator.md
src/: __init__.py  main.py
src/api/: __init__.py  dependencies.py  errors.py  frontend.py  templates.py  upload.py
src/config/: __init__.py  logging.py  settings.py
src/core/: auth.py  processor.py
src/models/: __init__.py  file.py  job.py  mapping.py  template.py
src/repositories/: __init__.py  database.py  file_repository.py  job_repository.py  mapping_repository.py  template_repository.py
src/services/: __init__.py  batch_processor.py  csv_parser.py  docx_generator.py  excel_parser.py  excel_template_filler.py  file_storage.py  fuzzy_matcher.py  mapping_validator.py  output_storage.py  parser_factory.py  placeholder_parser.py  template_filler.py  template_store.py
src/static/: index.html  mapping.html  mapping.js  mobile.css  onboarding.html  onboarding.js  service-worker.js  templates.html  templates.js  upload.js
src/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_calculator.py
tests/e2e/: __init__.py  test_accessibility.py  test_animations.py  test_auto_mapping.py  test_complete_workflow.py  test_docs_endpoint.py  test_docs_playwright.py  test_empty_state.py  test_error_recovery.py  test_final_polish.py  test_help_features.py  test_mapping_page.py  test_mobile_experience.py  test_onboarding.py  test_performance_optimization.py  test_progress_indicator.py  test_template_simplified.py  test_upload_page.py  test_upload_workflow.py  test_workflow_fixes.py
tests/integration/: __init__.py  test_database_integration.py  test_download_endpoints.py  test_list_files_endpoint.py  test_mapping_api_validation.py  test_performance.py  test_repositories.py  test_sqlite_persistence.py  test_template_api.py  test_upload_endpoint.py  test_workflow_redirect_fix.py
tests/unit/: test_batch_processor.py  test_cors.py  test_csv_parser.py  test_docx_generator.py  test_excel_parser.py  test_excel_template_filler.py  test_file_model.py  test_file_storage.py  test_fuzzy_matcher.py  (+14 more)
(+44 files in other folders)
