[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fill"
version = "0.1.0"
description = "A web application for automatically filling 2D table data into template files"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "TBD"}
authors = [
    {name = "Ralph AI Agent"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "playwright: mark test as requiring Playwright browser automation",
]
filterwarnings = [
    "error",
    # Ignore ResourceWarning from StreamingResponse in TestClient (known FastAPI issue)
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # Ignore Pydantic deprecation warnings (class-based config in legacy code)
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 85

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
